2010/04    fixed bug in covariance matrix output for EEV and VEV models
2010/02    moved CITATION to inst and used standard format
           BibTex entries are in inst/cite
           fixed bug in handling missing classes in mclustBIC
           clarified license wording
2010/01    corrected output description in mclustModel help file
           updated mclust manual reference to show revision
2009/12    updated defaultPrior help file
           added utility functions for imputing missing data with the
           mix package
           changed default max # of mixture components in each class 
           from 9 to 3
2009/10    fixed problems with \cr in mclustOptions help file
2009/06    fixed plot.mclustBIC/plot.Mclust to handle modelNames
           changed "orientation" for VEV, VVV models to be consistent
              with R eigen() and the literature
           fixed some problems including doc for the noise option
           updated the unmap function to optionally include missing groups
2009/06    fixed bug in the "errors" option for randProj
           fixed boundary cases for the "noise" option
2009/04/29 changed PKG_LIBS order in src/Makevars
           fixed Mclust to handle sampling in data expression in call
2009/03/04 added permission for CRAN distribution to LICENSE
           fixed problems with help files found by new parser
2008/11/29 added EXPR = to all switch functions that didn't already have it
2008/10/31 added pro component to parameters in dens help file 
2008/10/02 fixed some problems with the noise option

2006 version of MCLUST, by Fraley and Raftery
(Dept. of Statistics, University of Washington)

Version 3.0: New functionality added, including conjugate priors 
for Bayesian regularization. 
Backward compatibility is not guaranteed since the implementation of some 
functions has changed to make them easier to use or maintain.

Version 3.1: Most plotting functions changed to use color.
Mclust/mclustBIC fixed to work with G=1