@@ -69,10 +69,10 @@
 \section{References}{
   C. Fraley and A. E. Raftery (2002).
   Model-based clustering, discriminant analysis, and density estimation.
-  \emph{Journal of the American Statistical Association}. 
+  \emph{Journal of the American Statistical Association 97:611:631}. 
   
-  C. Fraley and A. E. Raftery (2006).
-  MCLUST Version 3 for R: Normal Mixture Modeling  and Model-Based Clustering, 
+  C. Fraley and A. E. Raftery (2006, revised 2010).
+  MCLUST Version 3 for R: Normal Mixture Modeling and Model-Based Clustering, 
   Technical Report no. 504, Department of Statistics,
   University of Washington. 
 }
