@@ -53,7 +53,7 @@ clPairs(data, classification, symbols, colors, labels=dimnames(data)[[2]],
   classifications are labeled with different symbols. 
 }
 \section{References}{
-  C. Fraley and A. E. Raftery (2006).
+  C. Fraley and A. E. Raftery (2006, revised 2010).
   MCLUST Version 3 for R: Normal Mixture Modeling
   and Model-Based Clustering, Technical Report no. 504, 
   Department of Statistics, University of Washington.
