@@ -129,7 +129,7 @@ randProj(data, seeds=0, parameters=NULL, z=NULL,
   Model-based clustering, discriminant analysis, and density estimation.
   \emph{Journal of the American Statistical Association 97:611-631}. 
 
-  C. Fraley and A. E. Raftery (2006).
+  C. Fraley and A. E. Raftery (2006, revised 2010).
   MCLUST Version 3: An R Package for Normal Mixture Modeling
   and Model-Based Clustering, Technical Report, Department of Statistics,
   University of Washington.
